[gd_scene load_steps=6 format=2]

[ext_resource path="res://ASSETS/SBS_Seamless_Large/Large 1024x1024/Starfields/Starfield 1 - 1024x1024.png" type="Texture" id=1]
[ext_resource path="res://SCENES/Level/BackgroundScroller.gd" type="Script" id=2]
[ext_resource path="res://addons/ppc/ppcamera.tscn" type="PackedScene" id=3]
[ext_resource path="res://SCENES/HUD/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://SCENES/Level/Level.gd" type="Script" id=5]

[node name="Level" type="Node2D"]
pause_mode = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" parent="." instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="PinchPanCamera" parent="." instance=ExtResource( 3 )]
pause_mode = 1
position = Vector2( 704, 448 )
smoothing_speed = 25
min_zoom_factor = 0.1
show_debug_icon = true

[node name="BackgroundScroller" type="ParallaxBackground" parent="."]
pause_mode = 1
scroll_ignore_camera_zoom = true
script = ExtResource( 2 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="BackgroundScroller"]
motion_mirroring = Vector2( 2000, 1500 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Background" type="Sprite" parent="BackgroundScroller/ParallaxLayer"]
scale = Vector2( 2, 1.5 )
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Objects" type="Node" parent="."]
pause_mode = 1

[node name="DarkMatters" type="Node" parent="Objects"]

[node name="CosmicDusts" type="Node" parent="Objects"]

[node name="Meteroids" type="Node" parent="Objects"]

[node name="Planets" type="Node" parent="Objects"]

[node name="Stars" type="Node" parent="Objects"]

[node name="BlackHoles" type="Node" parent="Objects"]

[node name="Galaxies" type="Node" parent="Objects"]
